--- a/Readme.org
+++ b/Readme.org
@@ -4,6 +4,12 @@ sublime text風のぬるぬるスクロール＆ミニマップ
 
 smooth-scrolling and minimap, like sublime editor
 
+** THE VERSION 1.0.1 OF "sublimity-scroll.el" BROKE BACKWARD COMPATIBILITY
+
+Now variables "sublimity-scroll--xspeeds" and
+"sublimity-scroll--xdecc" are not useful. Use
+"sublimity-scroll-weight1" and "sublimity-scroll-weight2" instead.
+
 ** Installation
 
 Require this script.
