--- a/Readme.org
+++ b/Readme.org
@@ -35,14 +35,47 @@ instead. Therefore, to disable horizontal scrolling, set
 
 You may change speed of scrolling.
 
-: (setq sublimity-scroll-vdecc 1.7)
-: (setq sublimity-scroll-vspeeds '(1000 300 100 50 7 3))
+: (setq sublimity-scroll-weight1 10)
+: (setq sublimity-scroll-weight2 1.7)
 
-: (setq sublimity-scroll-hdecc 1.5)
-: (setq sublimity-scroll-hspeeds '(400 200 10))
+"sublimity-scroll-weight1" defines the granularity of scroll
+speeds. basically, if set greater, scroll ends more slowly. You must
+set a positive integer for this variable.
 
-"-speeds" is a list of speed (in descending order). "-decc" defines
-how fastly the speed goes down.
+"sublimity-scorll-weight2" defines how the scorll speed goes
+down. basically, if set greater, long scroll become slower. You must
+set a positive real number not less than "1.0" for this variable.
+
+*** Examples
+
+Consider we are going to travel 3000 lines with following
+configuration
+
+: (weight1, weight2) = (10, 1.7)
+
+then 3000 lines of scroll is divided into 30 steps shown below
+
+: (1000 1000 100 100 100 100 100 100 100 100 100
+:  10 10 10 10 10 10 10 10 10 1 1 1 1 1 1 1 1 1 1)
+
+if weight2 is much greater, "3.0" for example, then scroll takes more
+steps (slower)
+
+: (1000 100 100 100 100 100 100 100 100 100 100 100
+:  100 100 100 100 100 100 100 10 10 10 10 10 10 10
+:  10 10 10 10 10 10 10 10 10 10 10 1 1 1 1 1 1 1 1
+:  1 1 1 1 1 1 1 1 1 1 1 1)
+
+In examples above, all speeds of each steps are all 10^n, because
+weight1 is "10". if weight1 is much fewer, "2" for example, then
+
+: (1024 1024 512 256 64 64 32 8 8 4 2 1 1)
+
+or if much greater, "15" for example, then
+
+: (225 225 225 225 225 225 225 225 225 225 225 225
+:  15 15 15 15 15 15 15 15 15 15 15 15 15 15 15 15
+:  15 15 15 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1)
 
 ** sublimity-map Settings
 
