--- a/Readme.org
+++ b/Readme.org
@@ -6,8 +6,8 @@ smooth-scrolling and minimap, like sublime editor
 
 ** THE VERSION 1.1.0 OF "sublimity.el" BROKE BACKWARD COMPATIBILITY
 
-sublimity turned into minor-mode. to enable sublimity, call function
-"sublimity-mode" or "sublimity-global-mode".
+sublimity turned into minor-mode. to enable sublimity, you must call
+function "sublimity-global-mode" in addition to load sublimity.el.
 
 ** THE VERSION 1.1.0 OF "sublimity-scroll.el" BROKE BACKWARD COMPATIBILITY
 
