--- a/Readme.org
+++ b/Readme.org
@@ -112,3 +112,9 @@ When non-nil, minimap is automatically displayed on every scrolling.
 
 With settings above, minimap is displayed after 5 seconds of idle
 time.
+** Known Bugs, Limitations
+
++ if sublimity-scroll does not animate scroll correctly, try to load
+  sublimity at the bottom of your init file (perhaps some libraries
+  conflict with sublimity in post-command-hook, and reordering hooks
+  possibly solve the problem)
