tiny fix for doc

--- a/Readme.org
+++ b/Readme.org
@@ -129,5 +129,5 @@ sublimity-map-delay.
 
 + if sublimity-scroll does not animate scroll correctly, try to load
   sublimity at the bottom of your init file (perhaps some libraries
-  conflict with sublimity in post-command-hook, and reordering hooks
+  conflict with sublimity in post/pre-command-hook, and reordering hooks
   possibly solve the problem)
