--- a/Readme.org
+++ b/Readme.org
@@ -1,75 +1,87 @@
 * sublimity.el
 
-sublime text風のぬるぬるスクロール＆ミニマップ
+sublime text風のスムーススクロール、ミニマップ、集中モード
 
-smooth-scrolling and minimap, like sublime editor
+smooth-scrolling, minimap and distraction-free mode (inspired by the
+sublime editor)
 
-** NOTE: sublimity NOW DEPENDS ON "cl-lib.el"
+** Screencast
 
-cl-lib.el is a lisp library which is bundled from Emacs version
-24.3. If you use Emacs<24.3, you must download and put cl-lib.el to
-your load-path.
+[[screencast.png]]
+
+** NOTE: INCOMPATIBLE CHANGES IN THE LATEST VERSION
+
+- sublimity-mode is now a global minor-mode, thus
+  "sublimity-global-mode" is not useful anymore.
+
+- sublimity-map is rewritten for better performance and following
+  variables became no use.
+  + =sublimity-map-on-scroll=
+  + =sublmity-map-on-commands=
+  + =sublimity-map-keep-commands=
 
 ** Installation
 
-Require this script and some of "sublimity-scroll" "sublimity-map"
+Require this script and some of "sublimity-scroll", "sublimity-map"
+and "sublimity-attractive"
 
 : (require 'sublimity)
-: (require 'sublimity-scroll)
-: (require 'sublimity-map)
+: ;; (require 'sublimity-scroll)
+: ;; (require 'sublimity-map)
+: ;; (require 'sublimity-attractive)
 
-then call command "M-x sublimity-mode".
+then call command "M-x sublimity-mode" (or put the following
+expression in your init file).
 
-If you want to enable sublimity everywhere, call function
-sublimity-global-mode instead.
-
-: (sublimity-global-mode)
+: (sublimity-mode 1)
 
 ** Notes
 
-When you load this script, "auto-hscroll-mode" is automatically
-disabled, and "sublimity-auto-hscroll-mode" will work
+When you turn =sublimity-mode= on, "auto-hscroll-mode" is
+automatically disabled, and "sublimity-auto-hscroll-mode" will work
 instead. Therefore, to disable horizontal scrolling, set
 "sublimity-auto-hscroll-mode" but not "auto-hscroll-mode".
 
-** sublimity-scroll Settings
+** Customization
+*** sublimity-scroll (smooth scrolling)
 
-You may configure speed of scroll by setting two variables.
+You may configure the speed of smooth-scroll by setting two variables.
 
 : (setq sublimity-scroll-weight 10
 :       sublimity-scroll-drift-length 5)
 
-scroll is divided into (about) =weight + drift-length= steps. for
+Scroll is basically divided into (weight + drift-length) steps. for
 example, with the configuration above, 100 lines of scrolling is
-divided into 15 steps
+divided into 15 (= 10 + 5) steps
 
 : (17 15 14 12 11 8 7 5 4 2 1 1 1 1 1)
 
-and it looks smoother than 1 step scroll. note that last 5 steps are
-all 1 line scrolls, because drift-length is set 5. so you may make
+and it looks smoother than 1 step scroll. Note that last 5 steps are
+all 1 line scrolls, because drift-length is set 5. So you may make
 scroll more smooth by setting drift-length greater. try :
 
 : (setq sublimity-scroll-weight 5
 :       sublimity-scroll-drift-length 10)
 
-with the configuration above, scroll is divided into 15 steps again,
+With the configuration above, scroll is divided into 15 steps again,
 
 : (30 24 18 12 6 1 1 1 1 1 1 1 1 1 1)
 
-but last *10* steps are all 1 line scrollings. this looks smoother but
-perhaps more annoying for some users.
+but the last *10* steps are all 1 line scrolls. this looks smoother
+but perhaps more annoying for some users.
 
-** sublimity-map Settings
-*** sublimity-map-size, fraction, text-scale
+*** sublimity-map (minimap)
+**** sublimty-map-size, fraction, text-scale
 
 : (setq sublimity-map-size 20)
 : (setq sublimity-map-fraction 0.3)
 : (setq sublimity-map-text-scale -7)
 
 "sublimity-map-fraction" defines the maximum fraction of width that
-minimap can get.
+minimap can get. "sublimity-map-text-scale" is passed to
+"text-scale-set" on minimap setup.
 
-*** sublimity-map-setup-hook
+**** sublimity-map-setup-hook
 
 : (add-hook 'sublimity-map-setup-hook
 :           (lambda ()
@@ -78,30 +90,32 @@ minimap can get.
 
 "sublimity-map-setup-hook" will run when minimap is created.
 
-*** sublimity-map-on-scroll
-
-: (setq sublimity-map-on-scroll t)
-
-When non-nil, minimap is automatically displayed on every scrolling.
-
-*** sublimity-map-on-commands
-
-: (add-to-list sublimity-map-on-commands 'backward-paragraph)
-: (add-to-list sublimity-map-on-commands 'forward-paragraph)
-
-Set this variable to a list of command names, after which minimap
-should be updated. If one of these commands are invoked, minimap is
-updated even when scroll does not occur.
-
-*** sublimity-map-set-delay
+**** sublimity-map-set-delay
 
 : (sublimity-map-set-delay 5)
 
-With settings above, minimap is displayed after 5 seconds of idle
-time. You can also cancel this timer, by passing "'inf" to
-sublimity-map-delay.
+With the setting above, minimap is displayed after 5 seconds of idle
+time. When sublimity-map-set-delay is called with nil, then minimap is
+shown with no delay. This defers from setting delay to 0, especially
+when used with sublimity-scroll, in the sense that minimap looks not
+deleted at all but gets worse performance.
 
-: (sublimity-map-set-delay 'inf)
+*** sublimity-attractive (distraction-free mode)
+**** sublimity-attractive-centering-width
+
+: (setq sublimity-attractive-centering-width 110)
+
+When a positive integer is set, buffer width is truncated to this
+value and drawn centered. To cancel this feature, set this value nil.
+
+**** sublimity-attractive-hide-xxxx
+
+Following functions are available to hide some UI parts.
+
+: (sublimity-attractive-hide-bars)
+: (sublimity-attractive-hide-vertical-border)
+: (sublimity-attractive-hide-fringes)
+: (sublimity-attractive-hide-modelines)
 
 ** Known Bugs, Limitations
 
