Trigger scroll animation if point is partially off-screen
Addresses #55 for `C-n` at bottom of a window showing part of a line
of text. Does not take `scroll-margin` into account.

--- a/Readme.org
+++ b/Readme.org
@@ -32,6 +32,8 @@ instead. Thus, to disable horizontal scrolling, set
 =sublimity-auto-hscroll-mode= but not =auto-hscroll-mode= while
 =sublimity-mode= is turned on.
 
+=sublimity-scroll= currently requires an unset/zero =scroll-margin=.
+
 ** Customization
 *** sublimity-scroll (smooth scrolling)
 
